# pi-mono

./: .gitignore  README_PYTHON.md
pi_agent_core/: __init__.py  _abort.py  _event_stream.py  agent.py  agent_loop.py  pyproject.toml  types.py
pi_agent_core/src/pi_agent_core/: __init__.py  _event_stream.py  _message_queue.py  agent_loop.py  types.py
pi_ai/: __init__.py  exceptions.py  models.py  pyproject.toml  registry.py  stream.py  types.py
pi_ai/providers/: __init__.py  bailian.py  base.py  faux.py  openai.py
pi_ai/src/pi_ai/: models.py  registry.py  stream.py
pi_ai/src/pi_ai/providers/: __init__.py  bailian.py  openai.py
pi_ai/src/pi_ai/utils/: __init__.py  validation.py
pi_ai/tests/: __init__.py  test_providers.py  test_stream.py  test_validation.py
pi_ai/utils/: __init__.py  validation.py
pi_coding_agent/: __init__.py  cli.py  pyproject.toml
pi_coding_agent/core/: __init__.py  agent_session.py  compaction.py  defaults.py  session_header.py  session_manager.py
pi_coding_agent/core/extensions/: __init__.py  loader.py  types.py
pi_coding_agent/core/tools/: __init__.py  bash.py  edit.py  find.py  grep.py  ls.py  read.py  write.py
pi_coding_agent/modes/: __init__.py  print_mode.py  rpc.py  sdk.py
pi_coding_agent/tui/: __init__.py  app.py  editor.py  footer.py  messages.py
tests/: test_abort.py  test_agent.py  test_agent_loop.py  test_agent_session.py  test_agent_types.py  test_cli.py  test_compaction.py  test_exceptions.py  test_extensions.py  test_models.py  test_modes.py  test_registry.py  test_session_manager.py  test_stream.py  test_tools.py  test_tui.py  test_types.py
