[project]
name = "pi-agent-core"
version = "0.1.0"
description = "Agent runtime with state management, event system, tool execution"
requires-python = ">=3.10"
dependencies = [
    "pi-ai",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"