[project]
name = "pi_agent_core"
version = "0.1.0"
description = "Agent runtime with state management, event system, tool execution"
requires-python = ">=3.10"
dependencies = [
    "pi_ai",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pi_agent_core"]
package-dir = {"pi_agent_core" = "."}

[tool.pytest.ini_options]
asyncio_mode = "auto"