[project]
name = "pi-coding-agent"
version = "0.1.0"
description = "Interactive coding agent CLI with session management"
requires-python = ">=3.10"
dependencies = [
    "pi-ai>=0.1.0",
    "pi-agent-core>=0.1.0",
    "textual>=0.40",
]

[project.scripts]
pi = "pi_coding_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["pi_coding_agent"]